@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 0a4751a6f81eeaeeb7139f673372b5c44adffffd ChangeLog
+SHA1 fe64d7339c55cd35e4362e957c67da51c116a653 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 5fe21be2b73106368a0bae9564ede7a5f9034126 META.yml
-SHA1 410f6e2c1d5cd7da1924f63d2b0ae20bb6f11906 MYMETA.json
-SHA1 3641500fac7e077d5aced9431c66dc11d6a8c293 MYMETA.yml
-SHA1 44aad17e2b9bdeb44130de83cfe3909c9b876772 Makefile.PL
+SHA1 2698ea06edf9dc726f639505439b43b9164554e5 META.yml
+SHA1 d7af83753ba1063ac25bc753bab0dacfe42739e0 MYMETA.json
+SHA1 16e7f878d42b7bddebab5a1cc8a639972061e7a2 MYMETA.yml
+SHA1 1d37a4acf7de4fe74d7b9ec0388000ee8cd09f87 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 c5096f77f7afdbddd504bb1f7b70e192a0700c4f bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 79b42241f2433be831af06e7e7df67b169adb8a4 lib/Net/FullAuto.pm
+SHA1 1a8f45d02b41ac09b64dff1bed997a5a6e2bb6c6 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,11 +56,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSmL2AAAoJEBa/9Pad787EKqgIAL+s28KRWXGdBvOQYGg4/foF
-NS4Pr5bhFN7zJ8x5Xzr6hoHW2gkC0SgbWuu1V3kcb3skcRGzQ92llqkdOkBG+EmV
-dVTSP6xQxpgaJloQWMC+WhpjW6al8DoWEPYdk85FCfAl1qMHHPxmEcgosxuQstsj
-V5GmVbPZFxi3Gmj7AxqlDL+Fi/wB4w+0+8jKy4tUibyn6hJFvRONbOWyeWLlaVqK
-fGrEPTgBV98rKg4L/M3A42eLNIJka/qKPAyG1VExoFgZJWcUZwUIE2cZ0tYnZEMS
-LhE/DKIL/87jQfDUwrC10o6sP/Ugl+5d2OgfpcBK93jlo2rm7kt6skDqqNKnmNU=
-=kBQP
+iQEcBAEBAgAGBQJSmMQLAAoJEBa/9Pad787EcAEH/iOa0yxhAGp6kMqnh/Y1yiDn
+VBGIXetNvVp0GS/O5UzA34ly0Ar/qWQ9ll8rkvrGMsRXXJ9JYHrcNCZe0civ48iu
+rGT26D1WRVgcL2WIOuqqwfF9E2TbYCOvr7Ou25O9RZsW4R3T5xAXvOZN9Xy9Q1Sr
+9Nqg5aWfd9CKyYRpJ1df2atbxUHKQKYKVU0BmIo81gpCSM090TvsDq6Dq9c3yS8S
+AULYNhigqhL46FOJR/4OF3lbyCSIGTVJ0tsVknBlxXxkaC/Ti0ktZ2zqLMShE0zh
+2G6shLY1FP1J4oW9S2rmlQSTF6M/GjMsFA2mL2YM0jThderTLg6UVrUtWJR5FPY=
+=S6LX
 -----END PGP SIGNATURE-----
