@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999954';
+our $VERSION='0.99999955';
 
 
 use 5.005;
