@@ -21,10 +21,17 @@
 
 2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.99999955 released.
+
+        * Tighter regex matching on module names.
+
+
+2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.99999954 released.
 
         * Moved CPAN::Meta::Requirements ahead of
-          CPAN::Meta in Makefile.PL
+          CPAN::Meta in Makefile.PL.
 
 
 2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
